syntax = "proto3";
package account;


message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  string userID = 1;
  string name = 2;
  string email = 3;
  string avatar = 4;
}

service Account {
  rpc getUserByEmail(GetUserByEmailRequest) returns (UserResponse) {}
}